fixed misaligning line numbers by expliciting setting font-family to css style variable

--- a/root/css/user-interface.css
+++ b/root/css/user-interface.css
@@ -148,7 +148,8 @@ html, body {
 .line-numbers-wrapper span {
     width: 1.7em;
     text-align: center;
-
+    
+    font-family: var(--editor-textarea-text-font-family);
     color: var(--editor-line-numbers-text-color);
 }
 
